configure-admission/bad-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: bad-pod
  labels:
    app: test
spec:
  containers:
  - name: nginx
    image: nginx:1.21
    securityContext:
      runAsUser: 0
