configure-admission/exempt-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: exempt-pod
  labels:
    app: test
    security-policy: exempt
spec:
  containers:
  - name: nginx
    image: nginx:1.21
    securityContext:
      runAsUser: 0
