configure-admission/test-namespace-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
  namespace: policy-test
spec:
  containers:
  - name: nginx
    image: nginx:1.21
    securityContext:
      runAsUser: 0
